--- a/styles/style.css
+++ b/styles/style.css
@@ -1,1 +1,354 @@
-/* место для вашего кода */
+body {
+	width: 1440px;
+	height: 2844px;
+	margin: 0 auto;
+	background-color: #FFF;
+}
+
+.header {
+	display: flex;
+	justify-content: flex-start;
+	margin: 92px 50px;
+	flex-shrink: 0;
+	background-color: #FFF;
+}
+
+.header__links-list {
+	display: flex;
+	align-self: center;
+	list-style: circle;
+	margin-right: 209px;
+	margin-top: 43px;
+	margin-bottom: 45px;
+	font-family: "Raleway";
+	font-size: 18px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+}
+
+.header__links-list-item {
+	margin-right: 32px;
+	color: #000;
+	white-space: nowrap;
+}
+
+.header__links-list-item_no-bullit {
+	list-style: none;
+}
+
+.header__link {
+	text-decoration: underline;
+	text-underline-offset: 5px;
+}
+
+.header__link_active {
+	text-decoration: none;
+}
+
+.no-right-margin-item {
+	margin-right: 0;
+}
+
+.header__logo {
+	display: block;
+	width: 148px;
+	height: 105px;
+	flex-shrink: 0;
+	margin-right: 355px;
+}
+
+.header__logo-image {
+	padding: 0 6px 4px 6px;
+}
+
+.address {
+	width: 240px;
+	height: 97px;
+	flex-shrink: 0;
+	color: #000;
+	font-family: "Raleway";
+	font-size: 18px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 24.3px; /* 135% */
+}
+
+.header__address {
+	margin-left: auto;
+	margin-top: 5px;
+	margin-bottom: 7px;
+}
+
+.cover {
+	position: relative;
+	min-width: auto;
+	min-height: auto;
+	background-image: url(/images/cover.jpg);
+	background-size: cover;
+	margin-bottom: 180px;
+	z-index: -2;
+}
+
+.overlay {
+	position: absolute;
+	background-color: rgba(0, 0, 0, 0.6);
+	inset: 0;
+	z-index: -1;
+}
+
+.cover__title {
+	color: #FFF;
+	font-family: "Raleway";
+	font-size: 100px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 115%; /* 115px */
+	letter-spacing: 30px;
+	text-transform: uppercase;
+	padding: 165px 50px 0 50px;
+}
+
+.aligned-text {
+	display: block;
+	margin-bottom: 10px;
+}
+
+.aligned-text_center {
+	text-align: center;
+}
+
+.aligned-text_right {
+	text-align: end;
+	margin-bottom: 0;
+}
+
+.letter-spacing-extended {
+	letter-spacing: 60px;
+}
+
+.no-letter-spacing {
+	letter-spacing: 0;
+}
+
+.cover__description {
+	display: flex;
+}
+
+.cover__description-text {
+	color: #FFF;
+	text-align: center;
+	font-family: "Raleway";
+	font-size: 22px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 28px; /* 127.273% */
+	text-transform: uppercase;
+	margin-left: 422px;
+	margin-bottom: 62px;
+	margin-top: 136px;
+	word-spacing: 17px;
+}
+
+.bet-button {
+	background-color: transparent;
+	padding: 12px 32px;
+	margin-bottom: 50px;
+	margin-top: 124px;
+	margin-right: 50px;
+	margin-left: auto;
+	color: #FFF;
+	text-align: center;
+	font-family: "Raleway";
+	font-size: 22px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	text-transform: uppercase;
+	border-style: solid;
+	border-color: #FFF;
+	border-width: 2px 0;
+}
+
+.lots {
+	padding-left: 50px;
+	padding-right: 50px;
+	min-height: 579px;
+}
+
+.lots__heading {
+	margin: 0 auto 27px 40px;
+	color: #000;
+	font-family: "Raleway";
+	font-size: 40px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: normal;
+	text-transform: uppercase;
+}
+
+.lots__card-list {
+	display: flex;
+	gap: 25px;
+	list-style: none;
+}
+
+.lots__card-list-item {
+	width: max-content;
+	min-height: 450px;
+	flex-grow: 1;
+}
+
+.card-link {
+	display: block;
+	text-decoration: none;
+	height: 100%;
+}
+
+.card {
+	position: relative;
+	display: flex;
+	flex-direction: column;
+	height: 100%;
+	width: 430px;
+	background-size: cover;
+	z-index: -2;
+}
+
+.card_type_film {
+	background-image: url(/images/card-lot-01.jpg);
+}
+
+.card_type_book {
+	background-image: url(/images/card-lot-02.jpg);
+}
+
+.card_type_picture {
+	background-image: url(/images/card-lot-03.jpg);
+}
+
+.card__title {
+	color: #FFF;
+	font-family: "Raleway";
+	font-size: 22px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: 120%; /* 26.4px */
+	text-decoration-line: underline;
+	text-transform: uppercase;
+	margin: 50px 40px auto;
+}
+
+.card__text {
+	color: #FFF;
+	font-family: "Raleway";
+	font-size: 20px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 120%; /* 24px */
+	margin: 0 40px 50px;
+}
+
+.lots__look-more-link {
+	display: inline-block;
+	margin: 30px auto 2px 40px;
+	color: #000;
+	font-family: "Raleway";
+	font-size: 20px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+	text-decoration: underline;
+	text-underline-offset: 5px;
+}
+
+.about {
+	display: flex;
+	gap: 25px;
+	margin: 181px 50px 180px;
+	min-height: 487px;
+}
+
+.about__logo {
+	background-color: #000;
+	border-radius: 50%;
+	width: 240px;
+	height: 240px;
+	margin: 0 95px;
+}
+
+.about__logo-image {
+	padding: 63px 46px;
+}
+
+.about-second__column {
+	display: inline-flex;
+	flex-direction: column;
+	gap: 100px;
+	margin-top: 100px;
+}
+
+.about__title {
+	color: #000;
+	font-family: "Raleway";
+	font-size: 40px;
+	font-style: normal;
+	font-weight: 700;
+	line-height: normal;
+	text-transform: uppercase;
+}
+
+.about__text {
+	color: #000;
+	font-family: "Raleway";
+	font-size: 20px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: normal;
+}
+
+.about__first-paragraph {
+	margin-bottom: 25px;
+}
+
+.footer {
+	margin: 0 50px 90px;
+	display: flex;
+	justify-content: space-between;
+	background-color: #FFF;
+}
+
+.footer__menu-list {
+	list-style: none;
+}
+
+.footer__menu-list-item {
+	color: #000;
+	text-align: center;
+	font-family: "Raleway";
+	font-size: 17px;
+	font-style: normal;
+	font-weight: 400;
+	line-height: 22px;
+}
+
+.footer__menu-link {
+	text-decoration: underline;
+	text-underline-offset: 5px;
+}
+
+.footer__menu-link_active {
+	text-decoration: none;
+}
+
+.footer__social-list {
+	display: flex;
+	justify-content: space-between;
+	height: 48px;
+	width: 240px;
+	list-style: none;
+}
+
+.footer__social-icon {
+	width: 48px;
+}
