--- a/styles/style.css
+++ b/styles/style.css
@@ -82,7 +82,7 @@ body {
 	position: relative;
 	min-width: auto;
 	min-height: auto;
-	background-image: url("/images/cover.jpg");
+	background-image: url(/images/cover.jpg);
 	background-size: cover;
 	margin-bottom: 180px;
 	z-index: -2;
@@ -214,15 +214,15 @@ body {
 }
 
 .card_type_film {
-	background-image: url("/images/card-lot-01.jpg");
+	background-image: url(/images/card-lot-01.jpg);
 }
 
 .card_type_book {
-	background-image: url("/images/card-lot-02.jpg");
+	background-image: url(/images/card-lot-02.jpg);
 }
 
 .card_type_picture {
-	background-image: url("/images/card-lot-03.jpg");
+	background-image: url(/images/card-lot-03.jpg);
 }
 
 .card__title {
