--- a/styles/style.css
+++ b/styles/style.css
@@ -107,13 +107,16 @@
 	margin-bottom: 10px;
 }
 
+.aligned-text:last-child {
+	margin-bottom: 0;
+}
+
 .aligned-text_center {
 	text-align: center;
 }
 
 .aligned-text_right {
 	text-align: end;
-	margin-bottom: 0;
 }
 
 .letter-spacing-extended {
@@ -189,7 +192,7 @@
 }
 
 .lots__card-list-item {
-	width: max-content;
+	width: 430px;
 	min-height: 450px;
 	flex-grow: 1;
 }
@@ -205,7 +208,7 @@
 	display: flex;
 	flex-direction: column;
 	height: 100%;
-	width: 430px;
+	width: 100%;
 	background-size: cover;
 	background-position: center;
 	z-index: 1;
@@ -277,7 +280,7 @@
 	padding: 63px 46px;
 }
 
-.about-second__column {
+.about__column_size_large {
 	display: inline-flex;
 	flex-direction: column;
 	gap: 100px;
